--- a/css/styles.css
+++ b/css/styles.css
@@ -871,11 +871,12 @@ ul {
 
 .modal .checkbox-label {
   position: relative;
-
+  letter-spacing: 0.03em;
   flex-direction: row;
-  justify-content: center;
+  justify-content: last baseline;
   align-items: center;
   margin-bottom: 30px;
+  padding-left: 8px;
 }
 
 .modal .label-title {
@@ -889,9 +890,12 @@ ul {
 
   font-size: 14px;
   line-height: 1.64;
-
+  letter-spacing: 0.03em;
   color: var(--second-word-logo);
   text-decoration: underline;
+}
+.visually-hidden {
+  visibility: hidden;
 }
 
 .checkbox-label .label-title {
@@ -899,14 +903,13 @@ ul {
   margin-left: 8px;
 }
 
-.checkbox-label .checkbox-icon {
+.checkbox-label .checkbox-icon .checked-icon {
   width: 16px;
   height: 15px;
   position: absolute;
-
   top: 0;
   left: 0;
-
+  fill: var(--top-bar);
   border: 2px solid var(--first-word-logo);
   border-radius: 2px;
 
@@ -916,7 +919,7 @@ ul {
 }
 .checked-icon {
   position: absolute;
-
+  fill: var(--top-bar);
   top: 0;
   left: 0;
   transform: translate(12px, 4px);
