--- a/css/styles.css
+++ b/css/styles.css
@@ -894,8 +894,11 @@ ul {
   color: var(--second-word-logo);
   text-decoration: underline;
 }
-.visually-hidden {
+.visually-hidden:not(:checked) {
   visibility: hidden;
+  background-color: #2196f3;
+  color: #2196f3;
+  fill: #2196f3;
 }
 
 .checkbox-label .label-title {
@@ -903,20 +906,6 @@ ul {
   margin-left: 8px;
 }
 
-.checkbox-label .checkbox-icon .checked-icon {
-  width: 16px;
-  height: 15px;
-  position: absolute;
-  top: 0;
-  left: 0;
-  fill: var(--top-bar);
-  border: 2px solid var(--first-word-logo);
-  border-radius: 2px;
-
-  opacity: 1;
-
-  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
 .checked-icon {
   position: absolute;
   fill: var(--top-bar);
@@ -926,16 +915,9 @@ ul {
   width: 16px;
   height: 15px;
 
-  opacity: 0;
+  opacity: 1;
 
   transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.form-checkbox:checked + .checkbox-icon {
-  opacity: 0;
-}
-.form-checkbox:checked ~ .checked-icon {
-  opacity: 1;
 }
 
 .modal .submit-btn {
