--- a/css/styles.css
+++ b/css/styles.css
@@ -904,6 +904,7 @@ ul {
 }
 
 .checkbox-label .checkbox-icon {
+  margin-left: 7px;
   width: 16px;
   height: 15px;
 
@@ -919,7 +920,7 @@ ul {
   position: absolute;
 
   top: 0;
-  left: 0;
+  left: 2px;
   transform: translate(12px, 4px);
   width: 16px;
   height: 15px;
